--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/monsters-rolodex.iml
+/package-lock.json
+/.idea/vcs.xml
